[project]
name = "codebreaking_at_cal"
version = "0.0.1"
authors = [
  { name="Ryan Cottone", email="rcottone@berkeley.edu" },
]
description = "Course package for Codebreaking at Cal"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]